355803: Foundset Scripting Scope Case: 355803